lwb-specific-implementations/monticore-scolar-instance/mc-language-component-tool/src/test/resources/cocos/valid/ReferencedGrammarExists.comp
package cocos.valid;

language component ReferencedGrammarExists {

  grammar mc.lang.G1;

  provides production A;
}