lwb-specific-implementations/monticore-scolar-instance/mc-language-component-tool/src/test/resources/cocos/invalid/ReferencedRuleInEPDoesNotExist.comp
package cocos.invalid;

language component ReferencedRuleInEPDoesNotExist {

  grammar mc.lang.G1;

  provides production A for A;

  requires optional embedding production OtherEP for NonExisting;
}